--- a/style.css
+++ b/style.css
@@ -16,11 +16,13 @@ h1 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    overflow-y: auto;
 }
 
 .header {
     margin: 20px 0px 20px 0px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -34,7 +36,17 @@ h1 {
     gap: 10px;
 }
 
+.text-style {
+    font-family: 'Roboto', sans-serif;
+    color: #3a3a3a;
+    font-size: 4rem;
+    font-weight: 800;
+}
+
 .board-container>div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background: #e0e0e0;
     box-shadow: 5px 5px 3px #c5c5c5, -3px -3px 3px #fbfbfb;
 }
@@ -42,6 +54,11 @@ h1 {
 .board-container>div:active {
     background: #e0e0e0;
     box-shadow: inset 5px 5px 3px #c5c5c5, inset -3px -3px 3px #fbfbfb;
+}
+
+.reset-button-container {
+    display: flex;
+    justify-content: center;
 }
 
 .reset-button {
